
[CHANGED] UploadedFile#filename_base is removed in favor of #basename

[CHANGED] UploadedFile#filename_extension is removed in favor of #extension

[CHANGED] UploadedFile#mime_type is removed in favor of #content_type

[CHANGED] _store_dir and _tmp_dir callbacks now take the file object as an argument, which means that the methods always MUST take an argument, even if you don't need it.

[REMOVED] Support for the exif columns, as in 0.2.X has been removed temporarily. It might be readded later.

[REMOVED] The old_files option as in 0.2.X has been removed. All old files are now stored. This option will be reintroduced in later versions of 0.3.X

[REMOVED] The :force_format option for image_columns as in 0.2.X has been removed and will be reintroduced later.

[REMOVED] The remote_upload_form helper, for encouraging bad JS practice. It will not be readded.

============================

0.2.1

* Added :force_format option to image_column

* Various Rails 1.2.1 compatibility fixes (mainly in test)

* Added :permissions option to upload_column.

* You can now assign normal Ruby File objects to upload and image columns

* upload_form_tag and remote_upload_form_tag now accept a block, just like Rails' form_tag

* You can now pass :none to image_column versions so nothing will be done to your image.

* FIXED #8109 Parallell uploads no longer wipe each other out

* WARNING: Compatibility with Rails < 1.2.1 dropped

============================

0.2

* A freaking huge refactoring of the code, basically ALL of the methods for accessing paths have changed, except for path itself. This was overdue and I apologize if it breaks anything, but I felt that the gain in consistency was worth it. It now works like this:

    path                --the current path of the file (including the filename)
    relative_path       --the current path of the file relative to the root_path option
    
    dir                 --the directory where the file is currently stored